2000-02-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/SNMPv2-USEC-MIB: added module (RFC 1910).
	
	* lib/smi.c: fixed smiGetXXX() functions to find items even
	if no module is specified.

	* lib/smi.h.in: added path to struct SmiModule.
	
	* ATTENTION: all the (internal and API) data structures are
	changed for significantly improved performance. This means that
	applications must be adapted to recompile, but it's worth!

	* configure.in: incremented libtool versioning major number.
	
2000-02-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smilint.c: added `-c configfile' option to the three
	tools. It allows to explicitly specifiy a configuration file.
	If at least one configfile is specified no default files are
	read.

	* mibs/TUBS-SMI: some changes to the TUBS-* MIBS from Juergen.
	
	* configure.in: fixed misused $prefix
	
	* tools/dump-corba.c: fixed module names of augmented entries.

	* tools/dump-tree.c: nodes that are not defined in the local
	module are gone. augmentation entries now list the index
	elements.

	* tools/dump-smi.c: fixed SMIv1 INDEX clauses where an SMIv2
	AUGMENTS clause was parsed.

2000-02-07  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-mosy.c: fixed determination of types of %tc's and 
	objects; added special type `ObjectID'. Added distinction of
	read-write/read-create. Checked output against mosy output for
	some standard modules (IF-MIB, RMON2-MIB, ...).

2000-02-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-sming.y: added parsing of SMIng extension statement.
	Its contents are stored in new elements of struct SmiMacro.

	* lib/parser-smi.y: made the mktime() call for parsed date
	information timezone idependent.

2000-02-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.h: removed lastupdated from SmiModule. This information has
	to be retrieved from the associated SmiRevisions, if present.

	* ATTENTION: first steps towards a reorganisation of internal